Move slides from slide to slides/, add pdf and video links, and RSS feed (for blog).

--- a/content/slides/34c3.md
+++ b/content/slides/34c3.md
@@ -7,6 +7,9 @@ menu:
 revealoptions:
   transition: fade
 description: "Lightning talk at 34c3, Leipzig 2017"
+pdf: /slides/34c3.pdf
+video: https://youtu.be/MdVxyXveDz0?t=47m32s
+
 ---
 
 # NeoPG
